# CRK-IO-BOARD

./: CHANGELOG.md  README.PROD.md  README.md  pyproject.toml  quickstart_linux.sh  quickstart_windows.bat  requirements.dev.txt  requirements.txt  test_config_standalone.py  test_protocol_standalone.py  test_sse_feature.py
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  OPERATIONS.md  OVERVIEW.md  PROTOCOL.md  STREAMING.md
docs/advanced/: DOC_USAGE_AND_TESTING.md  README_IO_BOARD.md  SSE_ARCHITECTURE.md
guides/: TESTING.md  VERIFICATION_CHECKLIST.md
reference/: INDEX.md  SSE_DOCUMENTATION_INDEX.md
specs/: 코맨드_요청_및_응답.csv  코맨드_종류.csv  통신사양서.csv
src/: main.py
src/api/v1/routers/: machine.py  management.py  recording.py  sse.py
src/core/: config.py  logging_config.py
src/io_board/: __init__.py  api.py  commands.py  config.py  events.py  exceptions.py  filters.py  io_types.py  protocol.py  recording.py  serial_io.py
src/io_board/api/: main.py
src/io_board/api/routers/: machine.py  management.py  recording.py  sse.py
src/io_board/stream/: data_sources.py  polling_service.py  stream_queues.py
src/services/: error_state_mgmt.py  recording.py
src/services/io_board/: commands.py  io_types.py  protocol.py  serial_io.py
src/services/polling/: __init__.py  data_sources.py  polling_service.py  stream_queues.py  stream_queues.pyi
